--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,6 +42,12 @@ jobs:
           path: ./web/_site
 
   # Deployment job
+  # Deployment job
+  
+    
+    
+  
+      
   deploy:
     environment:
       name: github-pages
@@ -49,11 +55,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Download artifact
-        uses: actions/download-pages-artifact@v3
-        with:
-          name: web-artifact
-          path: ./web/_site
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
