--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./web
-          destination: ./web/_site
+          destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
