--- a/web/hybridization/package.json
+++ b/web/hybridization/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy":"npx gh-pages -d dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
+    "gh-pages": "^6.1.1",
     "svelte": "^4.2.18",
     "vite": "^5.3.4"
   }
