--- a/web/hybridization/package.json
+++ b/web/hybridization/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://joseadrianrodriguezgonzalez.github.io/Hibridacion",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy":"npx gh-pages -d dist"
+    "deploy":"gh-pages -d dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
